--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -47,3 +47,10 @@
   /* overflow: scroll; */
   flex-grow: 1;
 }
+
+@media (max-width: 750px) {
+  .filter-bar {
+    display: flex;
+    flex-direction: column;
+  }
+}
