--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -54,3 +54,10 @@
     flex-direction: column;
   }
 }
+
+@media (max-width: 850px) {
+  .pokemonDetailedCard {
+    display: flex;
+    flex-direction: column;
+  }
+}
